<!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Tea Cosy</string>
    <string name="shop_again">Shop Again</string>
    <string name="this_is_your_cart">This is your cart</string>
    <string name="add_to_the_cart">Go to the cart</string>
    <string name="exit">Exit</string>
    <string name="the_item_is">The item is…</string>

    <string name="darjelling">Darjelling : 8.50 per 100 gram bag</string>
    <string name="assam">Assam : 7.50 per 100 gram bag</string>
    <string name="lapsang">Lapsang : Sous 9.5 per 100 gram bag</string>
    <string name="earl_grey">Earl Grey:  3.5 per 100 gram bag</string>
    <string name="irish_breakfast">Irish Breakfast : 2.5 per 100 gram bag</string>

    <string name="teas">"\Total of teas:                   €"</string>
    <string name="delivery">"\Delivery fees:                   €" </string>
    <string name="total">"\TOTAL:                  €"</string>
    <string name="choose_your_tea">Choose your tea selecting the quantity on the ComboBox... </string>

    <string-array name="quantity">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
