<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.shop.ShopFragment">

        <CheckBox
            android:id="@+id/checkbox_darjelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:orientation="horizontal"
            android:text="@string/darjelling"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="91dp" />

        <CheckBox
            android:id="@+id/checkbox_assam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:orientation="horizontal"
            android:text="@string/assam"
            app:layout_constraintTop_toTopOf="@+id/checkbox_darjelling"
            tools:layout_editor_absoluteX="91dp"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkbox_lapsang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:orientation="horizontal"
            android:text="@string/lapsang"
            app:layout_constraintTop_toTopOf="@+id/checkbox_assam"
            tools:layout_editor_absoluteX="91dp"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkbox_earl_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:orientation="horizontal"
            android:text="@string/earl_grey"
            app:layout_constraintTop_toTopOf="@+id/checkbox_lapsang"
            tools:layout_editor_absoluteX="91dp"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkbox_irish_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:orientation="horizontal"
            android:text="@string/irish_breakfast"
            app:layout_constraintTop_toTopOf="@+id/checkbox_earl_grey"
            tools:layout_editor_absoluteX="91dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/grey_text_color"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="96dp" />

        <Button
            android:id="@+id/correct_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add_to_the_cart"
            android:theme="@style/GoButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/choose_your_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/grey_text_color"
            android:text="@string/choose_your_tea"
            app:layout_constraintBottom_toTopOf="@+id/checkbox_darjelling"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>